<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">anSudoku</string>
    <string name="Hello">anSudoku</string>
    <string name="_continue">Continue</string>
    <string name="newgame">New Game</string>
    <string name="back">Back</string>
    <string name="automark">Automark</string>
    <string name="reset">reset</string>
    <string name="hint">Hint</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="author">scturtle@gmail.com\n2011</string>
    <string name="description">A sudoku game in respect to \n\&quot;Sudoku 401\&quot; on iOS.</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="challenging">Challenging</string>
    <string name="difficult">Difficult</string>
</resources>
